--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -419,7 +419,7 @@ nav:
         - dev/wallet/address.md
         - Types: dev/wallet/address/address_types.md
         - Validation: dev/wallet/address/address_validation.md
-        - Encoding: assets/py/Ergo_Address_Encoding.ipynb
+       # - Encoding: assets/py/Ergo_Address_Encoding.ipynb
       - Transactions: 
         - dev/protocol/transactions.md
         - Composing Transactions:
